--- a/StronglyTyped.GuidIds.Dapper/StronglyTyped.GuidIds.Dapper.csproj
+++ b/StronglyTyped.GuidIds.Dapper/StronglyTyped.GuidIds.Dapper.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<Version>1.0.0</Version>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.0.4" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\StronglyTyped.GuidIds\StronglyTyped.GuidIds.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\StronglyTyped.GuidIds\StronglyTyped.GuidIds.csproj" />
+	</ItemGroup>
 
 </Project>
