--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,8 @@ publish:GuidIds:
     stage: publish
     when: manual
     script:
-        - "PackagePath='./GuidIds/$(ls ./GuidIds | head -1)'"
+        - "PackagePath=./GuidIds/"
+        - "PackagePath+=$(ls ./GuidIds | head -1)"
         - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
 
 build:GuidIds.Dapper:
@@ -35,7 +36,8 @@ publish:GuidIds.Dapper:
     stage: publish
     when: manual
     script:
-        - "PackagePath='./GuidIds.Dapper/$(ls ./GuidIds.Dapper | head -1)'"
+        - "PackagePath=./GuidIds.Dapper/"
+        - "PackagePath+=$(ls ./GuidIds.Dapper | head -1)"
         - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
 
 build:IntIds:
@@ -53,7 +55,8 @@ publish:IntIds:
     stage: publish
     when: manual
     script:
-        - "PackagePath='./IntIds/$(ls ./IntIds | head -1)'"
+        - "PackagePath=./IntIds/"
+        - "PackagePath+=$(ls ./IntIds | head -1)"
         - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
 
 build:IntIds.Dapper:
@@ -71,7 +74,8 @@ publish:IntIds.Dapper:
     stage: publish
     when: manual
     script:
-        - "PackagePath='./IntIds.Dapper/$(ls ./IntIds.Dapper | head -1)'"
+        - "PackagePath=./IntIds.Dapper/"
+        - "PackagePath+=$(ls ./IntIds.Dapper | head -1)"
         - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
 
 build:LongIds:
@@ -89,7 +93,8 @@ publish:LongIds:
     stage: publish
     when: manual
     script:
-        - "PackagePath='./LongIds/$(ls ./LongIds | head -1)'"
+        - "PackagePath=./LongIds/"
+        - "PackagePath+=$(ls ./LongIds | head -1)"
         - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
 
 build:LongIds.Dapper:
@@ -107,7 +112,8 @@ publish:LongIds.Dapper:
     stage: publish
     when: manual
     script:
-        - "PackagePath='./LongIds.Dapper/$(ls ./LongIds.Dapper | head -1)'"
+        - "PackagePath=./LongIds.Dapper/"
+        - "PackagePath+=$(ls ./LongIds.Dapper | head -1)"
         - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
 
 build:StringIds:
@@ -125,7 +131,8 @@ publish:StringIds:
     stage: publish
     when: manual
     script:
-        - "PackagePath='./StringIds/$(ls ./StringIds | head -1)'"
+        - "PackagePath=./StringIds/"
+        - "PackagePath+=$(ls ./StringIds | head -1)"
         - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
 
 build:StringIds.Dapper:
@@ -143,5 +150,6 @@ publish:StringIds.Dapper:
     stage: publish
     when: manual
     script:
-        - "PackagePath='./StringIds.Dapper/$(ls ./StringIds.Dapper | head -1)'"
+        - "PackagePath=./StringIds.Dapper/"
+        - "PackagePath+=$(ls ./StringIds.Dapper | head -1)"
         - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
