--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,137 +19,4 @@ publish:GuidIds:
     script:
         - "PackagePath=./GuidIds/"
         - "PackagePath+=$(ls ./GuidIds | head -1)"
-        - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
-
-build:GuidIds.Dapper:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: build
-    script:
-        - "dotnet pack StronglyTyped.GuidIds.Dapper -o ../GuidIds.Dapper"
-    artifacts:
-        name: "$CI_JOB_NAME"
-        paths:
-            - GuidIds.Dapper
-
-publish:GuidIds.Dapper:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: publish
-    when: manual
-    script:
-        - "PackagePath=./GuidIds.Dapper/"
-        - "PackagePath+=$(ls ./GuidIds.Dapper | head -1)"
-        - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
-
-build:IntIds:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: build
-    script:
-        - "dotnet pack StronglyTyped.IntIds -o ../IntIds"
-    artifacts:
-        name: "$CI_JOB_NAME"
-        paths:
-            - IntIds
-
-publish:IntIds:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: publish
-    when: manual
-    script:
-        - "PackagePath=./IntIds/"
-        - "PackagePath+=$(ls ./IntIds | head -1)"
-        - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
-
-build:IntIds.Dapper:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: build
-    script:
-        - "dotnet pack StronglyTyped.IntIds.Dapper -o ../IntIds.Dapper"
-    artifacts:
-        name: "$CI_JOB_NAME"
-        paths:
-            - IntIds.Dapper
-
-publish:IntIds.Dapper:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: publish
-    when: manual
-    script:
-        - "PackagePath=./IntIds.Dapper/"
-        - "PackagePath+=$(ls ./IntIds.Dapper | head -1)"
-        - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
-
-build:LongIds:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: build
-    script:
-        - "dotnet pack StronglyTyped.LongIds -o ../LongIds"
-    artifacts:
-        name: "$CI_JOB_NAME"
-        paths:
-            - LongIds
-
-publish:LongIds:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: publish
-    when: manual
-    script:
-        - "PackagePath=./LongIds/"
-        - "PackagePath+=$(ls ./LongIds | head -1)"
-        - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
-
-build:LongIds.Dapper:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: build
-    script:
-        - "dotnet pack StronglyTyped.LongIds.Dapper -o ../LongIds.Dapper"
-    artifacts:
-        name: "$CI_JOB_NAME"
-        paths:
-            - LongIds.Dapper
-
-publish:LongIds.Dapper:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: publish
-    when: manual
-    script:
-        - "PackagePath=./LongIds.Dapper/"
-        - "PackagePath+=$(ls ./LongIds.Dapper | head -1)"
-        - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
-
-build:StringIds:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: build
-    script:
-        - "dotnet pack StronglyTyped.StringIds -o ../StringIds"
-    artifacts:
-        name: "$CI_JOB_NAME"
-        paths:
-            - StringIds
-
-publish:StringIds:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: publish
-    when: manual
-    script:
-        - "PackagePath=./StringIds/"
-        - "PackagePath+=$(ls ./StringIds | head -1)"
-        - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
-
-build:StringIds.Dapper:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: build
-    script:
-        - "dotnet pack StronglyTyped.StringIds.Dapper -o ../StringIds.Dapper"
-    artifacts:
-        name: "$CI_JOB_NAME"
-        paths:
-            - StringIds.Dapper
-
-publish:StringIds.Dapper:
-    image: mcr.microsoft.com/dotnet/core/sdk:2.2
-    stage: publish
-    when: manual
-    script:
-        - "PackagePath=./StringIds.Dapper/"
-        - "PackagePath+=$(ls ./StringIds.Dapper | head -1)"
-        - "dotnet nuget push $PackagePath --api-key $NugetKey --source $Source"
+        - "dotnet nuget push $PackagePath --api-key=$NugetKey --source=$Source"
