adding some printing to help figure out whats wrong with nuget publishing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,4 +19,6 @@ publish:GuidIds:
     script:
         - "PackagePath=./GuidIds/"
         - "PackagePath+=$(ls ./GuidIds | head -1)"
+        - "echo $PackagePath"
+        - "echo $Source"
         - "dotnet nuget push $PackagePath --api-key=$NugetKey --source=$Source"
