--- a/StronglyTyped.GuidIds/StronglyTyped.GuidIds.csproj
+++ b/StronglyTyped.GuidIds/StronglyTyped.GuidIds.csproj
@@ -3,6 +3,21 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>1.0.0</Version>
+    <Authors>krishemenway</Authors>
+    <Company>krishemenway</Company>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/krishemenway/strongly-typed-identifiers/tree/master/StronglyTyped.GuidIds</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/krishemenway/strongly-typed-identifiers/tree/master/StronglyTyped.GuidIds</PackageProjectUrl>
+    <Description>This library includes an Id&lt;T&gt; struct that can be used for typing Guid based identifiers in your code. This should be used if you desire an extra level of type safety for identifier variables, fields, properties, etc. In addition, it provides improved code readability by allowing you to communicate the content of a variable using both the type name as well as in the variable name.</Description>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>identifier, id</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
