--- a/StronglyTyped.IntIds.Dapper/StronglyTyped.IntIds.Dapper.csproj
+++ b/StronglyTyped.IntIds.Dapper/StronglyTyped.IntIds.Dapper.csproj
@@ -2,8 +2,23 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
+		<Authors>krishemenway</Authors>
+		<Company>krishemenway</Company>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<RepositoryUrl>https://github.com/krishemenway/strongly-typed-identifiers/tree/master/StronglyTyped.IntIds.Dapper</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/krishemenway/strongly-typed-identifiers/tree/master/StronglyTyped.IntIds.Dapper</PackageProjectUrl>
+		<Description>This is a companion library for to integrate StronglyTyped.IntIds as a usable type in a Dapper query in an easy way.</Description>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>identifier, id, dapper</PackageTags>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.0.4" />
