--- a/StronglyTyped.StringIds/StronglyTyped.StringIds.csproj
+++ b/StronglyTyped.StringIds/StronglyTyped.StringIds.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>1.1.0</Version>
+		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<Version>2.0.0</Version>
 		<Authors>krishemenway</Authors>
 		<Company>krishemenway</Company>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -18,10 +18,6 @@
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
 		</None>
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
 	</ItemGroup>
 
 </Project>
