--- a/StronglyTyped.GuidIds/StronglyTyped.GuidIds.csproj
+++ b/StronglyTyped.GuidIds/StronglyTyped.GuidIds.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <Version>2.0.0</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>3.0.0</Version>
     <Authors>krishemenway</Authors>
     <Company>krishemenway</Company>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -18,6 +18,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="4.6.0" />
   </ItemGroup>
 
 </Project>
