--- a/StronglyTyped.LongIds.Dapper/StronglyTyped.LongIds.Dapper.csproj
+++ b/StronglyTyped.LongIds.Dapper/StronglyTyped.LongIds.Dapper.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.0</TargetFramework>
-		<Version>2.0.0</Version>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<Version>3.0.0</Version>
 		<Authors>krishemenway</Authors>
 		<Company>krishemenway</Company>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
