--- a/.github/workflows/StronglyTyped.LongIds.Dapper.yml
+++ b/.github/workflows/StronglyTyped.LongIds.Dapper.yml
@@ -1,4 +1,4 @@
-name: StronglyTyped.GuidIds
+name: StronglyTyped.LongIds.Dapper
 on: [push]
 
 jobs:
@@ -12,11 +12,11 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: Build with dotnet
-      run: dotnet pack ./StronglyTyped.GuidIds --include-source --include-symbols --output ./packed
+      run: dotnet pack ./StronglyTyped.LongIds.Dapper --include-source --include-symbols --output ./packed
     - uses: actions/upload-artifact@v1
       with:
-        name: StronglyTyped.GuidIds
-        path: ./StronglyTyped.GuidIds/packed
+        name: StronglyTyped.LongIds.Dapper
+        path: ./StronglyTyped.LongIds.Dapper/packed
     - name: Publish to Nuget
       run: dotnet nuget push **/*.nupkg
         --api-key ${{ secrets.NugetKey }}
