--- a/.github/workflows/StronglyTyped.LongIds.yml
+++ b/.github/workflows/StronglyTyped.LongIds.yml
@@ -18,6 +18,6 @@ jobs:
         name: StronglyTyped.LongIds
         path: ./StronglyTyped.LongIds/packed
     - name: Publish to Nuget
-      run: dotnet nuget push **/*.nupkg
+      run: dotnet nuget push **/*.symbols.nupkg
         --api-key ${{ secrets.NugetKey }}
         --source ${{ secrets.NugetSource }}
