--- a/.github/workflows/StronglyTyped.StringIds.Dapper.yml
+++ b/.github/workflows/StronglyTyped.StringIds.Dapper.yml
@@ -18,6 +18,6 @@ jobs:
         name: StronglyTyped.StringIds.Dapper
         path: ./StronglyTyped.StringIds.Dapper/packed
     - name: Publish to Nuget
-      run: dotnet nuget push **/*.nupkg
+      run: dotnet nuget push **/*.symbols.nupkg
         --api-key ${{ secrets.NugetKey }}
         --source ${{ secrets.NugetSource }}
